--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -1,6 +1,8 @@
 ion-icon{
     padding-left: 10px;
     font-size: 26px;
+    --color:#fff
+
     
 }
 
